appimage angepasst an neue startoptionen und zusätzlichen dependency Ordner.